--- a/index.html
+++ b/index.html
@@ -319,8 +319,7 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button accordion-background" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                            <p><strong>Lead Specialty Coordinator/Specialty Coordinator</strong></p><br>
-                            <p>Benecard Central Fill</p>
+                            <strong>Lead Specialty Coordinator/Specialty Coordinator</strong>: Benecard Central Fill
                         </button>
                     </h2>
                     <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#workExperience">
@@ -333,8 +332,7 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed accordion-background" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                            <p><strong>Scheduling Specialist</strong></p><br>
-                            <p>Holy Spirit Health Systems</p>
+                            <strong>Scheduling Specialist</strong>: Holy Spirit Health Systems
                         </button>
                     </h2>
                     <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#workExperience">
@@ -347,8 +345,7 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed accordion-background" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                            <p><strong>Operations Supervisor</strong></p><br>
-                            <p>UPS</p>
+                            <strong>Operations Supervisor</strong>: UPS
                         </button>
                     </h2>
                     <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#workExperience">
@@ -361,8 +358,7 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed accordion-background" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                            <p><strong>Inside Sales Representative</strong></p><br>
-                            <p>West Shore Home</p>
+                            <strong>Inside Sales Representative</strong></p>: West Shore Home
                         </button>
                     </h2>
                     <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#workExperience">
@@ -375,8 +371,7 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed accordion-background" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                            <p><strong>Taxpayer Information Services Call Center Supervisor</strong></p>
-                            <p>Pennsylvania Department of Revenue</p><br>
+                            <strong>Taxpayer Information Services Call Center Supervisor</strong>: Pennsylvania Department of Revenue
                         </button>
                     </h2>
                     <div id="collapseFive" class="accordion-collapse collapse" data-bs-parent="#workExperience">
@@ -389,8 +384,7 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed accordion-background" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
-                            <p><strong>Associate Application Developer</strong></p><br>
-                            <p>Highmark Health</p>
+                            <strong>Associate Application Developer</strong>: Highmark Health
                         </button>
                     </h2>
                     <div id="collapseSix" class="accordion-collapse collapse" data-bs-parent="#workExperience">
