--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button accordion-background" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                            <strong>Lead Specialty Coordinator/Specialty Coordinator</strong>: Benecard Central Fill
+                            <strong>Lead Specialty Coordinator/Specialty Coordinator: Benecard Central Fill</strong>
                         </button>
                     </h2>
                     <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#workExperience">
@@ -332,7 +332,7 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed accordion-background" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                            <strong>Scheduling Specialist</strong>: Holy Spirit Health Systems
+                            <strong>Scheduling Specialist: Holy Spirit Health Systems</strong>
                         </button>
                     </h2>
                     <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#workExperience">
@@ -345,7 +345,7 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed accordion-background" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                            <strong>Operations Supervisor</strong>: UPS
+                            <strong>Operations Supervisor: UPS</strong>
                         </button>
                     </h2>
                     <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#workExperience">
@@ -358,7 +358,7 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed accordion-background" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                            <strong>Inside Sales Representative</strong></p>: West Shore Home
+                            <strong>Inside Sales Representative: West Shore Home</strong>
                         </button>
                     </h2>
                     <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#workExperience">
@@ -371,7 +371,7 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed accordion-background" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                            <strong>Taxpayer Information Services Call Center Supervisor</strong>: Pennsylvania Department of Revenue
+                            <strong>Taxpayer Information Services Call Center Supervisor: Pennsylvania Department of Revenue</strong>
                         </button>
                     </h2>
                     <div id="collapseFive" class="accordion-collapse collapse" data-bs-parent="#workExperience">
@@ -384,7 +384,7 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed accordion-background" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
-                            <strong>Associate Application Developer</strong>: Highmark Health
+                            <strong>Associate Application Developer: Highmark Health</strong>
                         </button>
                     </h2>
                     <div id="collapseSix" class="accordion-collapse collapse" data-bs-parent="#workExperience">
